modification du fichier index

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>initialisation git</h1>
+        <h1>Premiere mise a jour du depot</h1>
         <p>mon test git c'est le bon !</p>
         
         
